--- a/index.css
+++ b/index.css
@@ -1,2 +1,35 @@
 body {
-background-color:rgba(255, 0, 0, 0.178);
+    background-color: rgba(251, 255, 0, 0.178);
+}
+
+main {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header {
+    text-align: center;
+    background-color: rgba(190, 164, 50, 0);
+    font-family: "Playwrite CU", cursive;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+nav {
+    gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a {
+    color: darkorchid;
+    text-shadow: rgba(39, 18, 41, 0.678) 1px 0 10px;
+}
+
+a:hover {
+    color: firebrick;
+    transform: rotate(-5deg);
+}
